# supermarket

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
erp-custom/elmahdi/: MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
erp-custom/elmahdi/elmahdi/: _full_cycle.py  _perm_pricing_smoke.py  _perm_smoke.py  _seed_alerts.py  _seed_catalog.py  hooks.py  modules.txt  patches.txt  print_helpers.py
erp-custom/elmahdi/elmahdi/api/: __init__.py  _batch.py  accounts_payable.py  audit.py  auth.py  branding.py  erp_submit.py  hr_attendance.py  hr_leave.py  hr_notifications.py  hr_payroll.py  hr_reports.py  hr_workforce.py  inventory_thresholds.py  invoice_matching.py  item_master.py  manager_dashboard.py  notifications.py  payment_authorization.py  personal_settings.py  pos_checkout.py  pos_closing_approval.py  pos_opening_policy.py  pos_profile_admin.py  pos_profile_auth.py  pricing.py  print_reports.py  purchase_approval_history.py  purchase_authorization.py  purchasing.py  purchasing_history.py  reports.py  rest_resource_guard.py  row_scoping.py  settings_audit.py  shift_authorization.py  shifts.py  spa_authorization.py  stock.py  supplier_authorization.py  (+5 more)
erp-custom/elmahdi/elmahdi/config/: __init__.py
erp-custom/elmahdi/elmahdi/elmahdi/: __init__.py
erp-custom/elmahdi/elmahdi/patches/: add_pos_idempotency_field.py  backfill_pos_closing_totals.py  grant_cashier_pos_closing_submit.py  harden_operational_approvals.py  harden_operational_security.py  (+4 more)
(+406 files in other folders)
